--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block page_title %}User login{% endblock %}
+{% block title %}User login{% endblock %}
+
 {% block content %}
 
 {% if form.errors %}
