--- a/global_app/templates/deal-comparison.html
+++ b/global_app/templates/deal-comparison.html
@@ -16,11 +16,9 @@
 {% block page_title %}Deal history comparison{% endblock %}
 {% block title %}Deal history comparison{% endblock %}
 
-{% block breadcrumb %}
-<ul class="breadcrumb">
-  <li><a href="/global/">Global</a><span class="divider"></span></li>
+{% block breadcrumb_inner %}
+  <li><a href="/global/">Global</a></li>
   <li><a href="/global/compare/X_Y">Compare deal history</a></li>
-</ul>
 {% endblock %}
 
 
