fixed map breadcrumbs
Former-commit-id: 4cb6caeecc4259e55af3560348fe3cd0fcc8f786

--- a/maplandmatrix/templates/index.html
+++ b/maplandmatrix/templates/index.html
@@ -16,6 +16,11 @@
     <link rel="stylesheet" href="{% static "css/map.css" %}"/>
 {% endblock %}
 
+
+{% block breadcrumb_inner %}
+    <li>{% trans "Map" %}</li>
+{% endblock %}
+
 {% block content %}
     {% include "filters.html" %}
     <div id="alert_placeholder"></div>
