Debug timestamp out, link to comparison fixed

--- a/global_app/templates/deal-detail.html
+++ b/global_app/templates/deal-detail.html
@@ -63,7 +63,7 @@
                                     <tr>
                                         <td>
                                             {% if forloop.counter == 1 %}<strong>{% endif %}
-                                            {{ changedate|timestamp_from_epoch }} {{ changedate }}
+                                            {{ changedate|timestamp_from_epoch }}
                                             {% if forloop.counter == 1 %}</strong>{% endif %}
                                         </td>
                                         <!-- <td>{{ item.activity_changed_by }}</td>
