--- a/templates/base.html
+++ b/templates/base.html
@@ -127,7 +127,7 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                           aria-expanded="false"><span class="lm-nav lm-flag"></span><span class="lm-navlink">Countries <span
+                           aria-expanded="false"><span class="lm-nav lm-flag"></span><span>Countries <span
                                 class="caret"></span></span></a>
                         <ul class="dropdown-menu">
                             <li>
@@ -149,7 +149,7 @@
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                           aria-expanded="false"><span class="lm-nav lm-plus-circle"></span><span class="lm-navlink">Get Involved <span
+                           aria-expanded="false"><span class="lm-nav lm-plus-circle"></span><span>Get Involved <span
                                 class="caret"></span></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="add-deal">Report a deal</a></li>
@@ -161,8 +161,8 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#" role="button"><span class="badge">?</span></a></li>
-                    <li><a href="#" role="button"><span class="badge"><span
+                    <li><a href="/help" role="button"><span class="badge">?</span></a></li>
+                    <li><a href="/editor" role="button"><span class="badge"><span
                             class="fa lm-envelope"></span></span></a>
                     </li>
                     {% language_chooser "language_chooser.html" %}
