--- a/landmatrix/static/css/icons.css
+++ b/landmatrix/static/css/icons.css
@@ -17,6 +17,7 @@
     font-weight: normal;
     font-variant: normal;
     text-transform: none;
+    margin-right: 2px;
 /*    line-height: 1; */
 
     /* Better Font Rendering =========== */
