--- a/global_app/templates/includes/dealpanels.html
+++ b/global_app/templates/includes/dealpanels.html
@@ -12,7 +12,7 @@
                     <h5 class="panel-title">
                         {{ form.form_title }}
                         <span id="collapsebtn_{{ forloop.counter }}"
-                              class="lm-chevron-circle-up pull-right"></span>
+                              class="lm-chevron-circle-down pull-right mgrey1"></span>
                     </h5>
                 </a>
 
